src/common/styles/pages/who-we-are.css
.WhoWeAre-intro {
  max-width: 1184px;
  @apply mx-auto;
  @apply px-6;

  @apply md:px-8;

  @apply lg:px-10;

  @apply xl:px-0;
}

.WhoWeAre-title {
  max-width: 984px;
  @apply my-8;

  @apply md:my-16;

  @apply lg:my-16;

  @apply xl:my-30;
}

.WhoWeAre-intro-copy {
  @apply mb-24;

  @apply md:mb-32;

  @apply lg:mb-32;

  @apply xl:mb-48;
}

.WhoWeAre-copy {
  max-width: 584px;
  @apply mx-auto;
  @apply mb-8;

  @apply md:mb-10;
  @screen md {
    max-width: 784px;
  }
}

.WhoWeAre-section-title {
  @apply mb-6;

  @apply md:mb-8;

  @apply lg:mb-10;

  @apply xl:mb-20;
}

.WhoWeAre-values-inner {
  max-width: 1024px;
  @apply flex;
  @apply flex-wrap;
  @apply justify-between;
  @apply mx-auto;

  @screen lg {
    @apply flex-nowrap;
  }

  @screen xl {
    max-width: 1184px;
  }
}

.WhoWeAre-value {
  @apply text-center;

  svg {
    @apply mx-auto;
  }

  p {
    @apply inline-block;
    @apply mt-2;
    @apply text-center;
    @apply mx-auto;
  }
}

.WhoWeAre-value.promises {
  width: 136px;
  @apply mb-4;

  @screen md {
    @apply order-1;
    width: 50%;
    svg {
      width: 136px;
    }
  }

  @screen lg {
    width: 136px;
    svg {
      @apply w-full;
    }
  }

  @screen xl {
    width: 184px;
  }
}

.WhoWeAre-value.initiate {
  width: 161px;
  @apply mb-4;

  @screen md {
    @apply order-2;
    width: 50%;
    svg {
      width: 161px;
    }

    p {
      width: 119px;
    }
  }

  @screen lg {
    width: 161px;
    @apply mt-14;
    svg {
      @apply w-full;
    }
  }

  @screen xl {
    width: 218px;
    @apply mt-20;
    p {
      width: 171px;
    }
  }
}

.WhoWeAre-value.iterate {
  flex-basis: 100%;
  @apply mb-4;

  svg,
  p {
    width: 191px;
  }

  @apply md:mx-0;

  @screen md {
    flex-basis: 191px;
    @apply order-4;
    svg {
      width: 100%;
    }
    p {
      width: 130px;
    }
  }

  @screen lg {
    flex-basis: 191px;
    @apply order-3;
    p {
      @apply w-full;
    }
  }

  @screen xl {
    flex-basis: 259px;
    p {
      width: 184px;
    }
  }
}

.WhoWeAre-value.details {
  width: 143px;
  @apply mb-4;

  @screen md {
    @apply order-3;
    p {
      width: 143px;
    }
  }

  @screen lg {
    width: 172px;
    @apply order-4;
    @apply mt-14;
    svg {
      width: 143px;
    }
    p {
      @apply w-full;
    }
  }

  @screen xl {
    width: 194px;
    @apply mt-20;
    svg {
      @apply w-full;
    }
    p {
      width: 184px;
    }
  }
}

.WhoWeAre-value.support {
  width: 136px;
  @apply mb-4;

  @screen md {
    @apply order-5;
    p {
      @apply w-full;
    }
  }

  @screen xl {
    width: 184px;
  }
}

.WhoWeAre-team {
  @apply mt-24;

  @apply md:mt-32;

  @apply lg:mt-36;

  @apply xl:mt-48;
}

.WhoWeAre-team-inner {
  @apply overflow-x-hidden;
}

.WhoWeAre-team-grid {
  max-width: 1970px;
  width: 100%;
  @apply mx-auto;
  @apply grid;
  @apply grid-cols-1;

  @screen md {
    @apply grid-cols-2;
  }

  @screen xl {
    @apply grid-cols-3;
  }
}

.WhoWeAre-team-member,
.you-here {
  @apply relative;
  @apply z-10;
  @apply bg-white;
}

.WhoWeAre-team-photo {
  @apply relative;
  @apply bg-foundation;
  @apply pt-4;

  @apply 2xl:pt-10;

  @screen xl {
    &:hover {
      .WhoWeAre-team-illustration {
        @apply opacity-0;
      }

      .WhoWeAre-team-headshot {
        @apply opacity-100;
      }
    }
  }
}

.WhoWeAre-team-illustration {
  width: 215px;
  @apply mx-auto;

  @screen lg {
    width: 284px;
  }

  @screen 2xl {
    width: 380px;
  }
}

.WhoWeAre-team-illustration {
  @apply opacity-100;
  transition: opacity 300ms ease;
}

.WhoWeAre-team-headshot {
  @apply opacity-0;
  position: absolute !important;
  @apply bottom-0;
  max-height: 92%;
  width: auto;
  left: 50%;
  transform: translateX(-50%);
  transition: opacity 300ms ease;
}

.WhoWeAre-team-info {
  @apply relative;
  @apply pt-6;
  @apply pb-16;

  @apply md:pt-4;
  @apply md:pb-20;
  @apply px-8;

  @apply lg:pb-22;

  @apply xl:pb-36;
}

.WhoWeAre-team-member:nth-child(3n + 1) {
  @screen xl {
    .WhoWeAre-team-info {
      @apply relative;
      z-index: 5;
    }
    .WhoWeAre-team-info:before {
      content: '';
      @apply block;
      @apply absolute;
      @apply bg-white;
      @apply top-0;
      @apply right-0;
      @apply bottom-0;
      height: 100%;
      width: 5000%;
      z-index: -1;
    }
  }
}

.WhoWeAre-team-member:nth-child(3n + 3),
.WhoWeAre-team-member:last-of-type {
  @screen xl {
    .WhoWeAre-team-info {
      @apply relative;
      z-index: 5;
    }
    .WhoWeAre-team-info:after {
      content: '';
      @apply block;
      @apply absolute;
      @apply bg-white;
      @apply top-0;
      @apply left-0;
      @apply bottom-0;
      height: 100%;
      width: 5000%;
      z-index: -1;
    }
  }
}

.WhoWeAre-introduce {
  @apply mx-auto;
  @apply px-6;
  @apply mt-12;
  @apply mb-24;

  @apply md:px-0;
  @apply md:mt-16;
  @apply md:mb-32;
  @screen md {
    width: 584px;
  }

  @apply lg:mb-26;
  @screen lg {
    width: 784px;
  }

  @apply xl:mt-24;
  @apply xl:mb-48;

  @apply 2xl:mt-36;
  @apply 2xl:mb-56;
  @screen 2xl {
    @apply w-full;
  }
}

.WhoWeAre .OtherServices-inner {
  @screen 2xl {
    max-width: 1574px;
  }
}

.WhoWeAre .OtherServices-services {
  width: 327px;

  @screen md {
    width: 600px;
  }

  @screen lg {
    width: 744px;
  }

  @screen xl {
    width: 790px;
  }

  @screen 2xl {
    width: 1176px;
  }
}

.you-here-gif {
  max-height: unset;
  width: 215px;
  height: auto;

  @screen lg {
    width: 284px;
  }

  @screen 2xl {
    width: 380px;
  }
}

.you-here {
  @screen md {
    .WhoWeAre-team-info {
      @apply pb-0;
    }
  }
}

section .you-here {
  position: fixed;
}

